test/fail/api/list/list_fill_by_negative.lly
#[
ValueError: Repeat count must be >= 0 (-1 given).
Traceback:
    File "[builtin]", from list::fill
    File "list_fill_by_negative.lly", from __main__ at line 8
]#

list::fill(-1, 100)
